2006-10-11  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h: translate opcodes to strings (merged from libmtp).

2006-10-10  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Canon Digital IXUS Wireless (same as SD430)
	  Marked them as capture capable, but capture mode not supported
	  yet.

	* ptp.c/ptp.h: Added "Request Direct Transfer" opcode for newer Canons.
	* ptp.c/ptp.h: Added "Get Direct Transfer Entries" opcode for newer Canons.
	* ptp.c: Read event in multiple parts (necessary for Canons who only read 8 
	  byte per interrupt).

2006-10-05  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Do not call Nikon commands on Canons.
	* library.c,config.c,ptp-private.h: 
	  Initialize Canon capture if we do "to RAM" capture
	  on canons.

2006-09-30  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: If PTP is busy, retry Nikon Capture
	  command.

2006-09-29  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Kodak Z612 as reported.

2006-09-25  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot A710 IS as reported.

2006-09-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Olympus IR-300
	* library.c: Do not allow "mkdir" of the same directory twice.
	* library.c: Do not allow "put" of the same file twice.

2006-09-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Kodak CD33.

2006-09-16  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Creative Zen V.
	* library.c: Added Canon PowerShot A630

2006-09-15  Hubert Figuiere  <hub@figuiere.net>

	* library.c: Added Canon EOS 400D/Digital Rebel XTi
	This camera does not have the infamous PTP bug.

2006-09-13  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptp.[ch]: formatstore function (from libmtp).
	* library.c: fixed iconv() usage for non glibc etc (from libmtp).

2006-09-11  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added iRIver T10 2GB model.